--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -7,44 +7,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Install dependencies
-      run: |
-        pip install flake8
-        pip install black
+      - name: Install dependencies
+        run: |
+          pip install flake8
+          pip install black
 
-    - name: Lint with Flake8 and Black
-      run: |
-        flake8 Bottle.py
-        black --check Bottle.py
+      - name: Lint with Flake8 and Black
+        run: |
+          flake8 Bottle.py
+          black --check Bottle.py
 
   test:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
-
-    - name: Run tests
-      run: pytest
+      - name: Install dependencies
+        run: pip install bottle pytest
+      - name: Run tests
+        run: pytest
 
   cd:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Display message
-      run: echo "Deployment in progress..."
+      - name: Display message
+        run: echo "Deployment in progress..."
 
-    - name: Check if server is up
-      run: |
-        curl -Is http://localhost:8000/ | head -n 1
-
+      - name: Check if server is up
+        run: |
+          curl -Is http://localhost:8000/ | head -n 1
