--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,8 +5,10 @@ on: [push, pull_request]
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -19,13 +21,14 @@ jobs:
 
       - name: Lint with Flake8 and Black
         run: |
-          ls
           flake8 Bottle.py
           black --check Bottle.py
 
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -40,6 +43,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Display message
         run: echo "Deployment in progress..."
 
