--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,6 +29,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.11, 3.8]
+    needs: [lint]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -42,9 +43,9 @@ jobs:
       - name: Run tests
         run: pytest --doctest-modules --ignore=Bottle.py
 
-  cd:
+  deploy:
     runs-on: ubuntu-latest
-
+    needs: [test]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -54,3 +55,10 @@ jobs:
       - name: Check if server is up
         run: |
           curl -Is http://localhost:8000/ | head -n 1
+
+  notification:
+    runs-on: ubuntu-latest
+    needs: [deploy]
+    steps:
+      - name: Notify Slack
+        run: echo "Slack message"
