ci: test always

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,6 +59,7 @@ jobs:
   notification:
     runs-on: ubuntu-latest
     needs: [deploy]
+    if: always()
     steps:
       - name: Notify Slack
         run: echo "Slack message"
