--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,3 +63,34 @@ jobs:
     steps:
       - name: Notify Slack
         run: echo "Slack message"
+
+  coverage:
+    runs-on: ubuntu-latest
+    needs: [test]
+    strategy:
+      matrix:
+        python-version: [3.11, 3.8]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Generate coverage
+        run: pytest --cov=. . --doctest-modules --ignore=Bottle.py
+      - name: Generate coverage badge
+        run: coverage-badge -o coverage.svg
+      - name: Commit coverage files
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add coverage.svg
+          git commit -m "Add coverage badge"
+          git push
+      - name: Update README
+        run: |
+          echo "[![Coverage](coverage.svg)](./coverage.svg)" >> README.md
+          git add README.md
+          git commit -m "Add coverage badge to README"
+          git push
