--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           pip install flake8
           pip install black
+          pip install pytest
 
       - name: Lint with Flake8 and Black
         run: |
