--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,6 @@ jobs:
         run: |
           pip install flake8
           pip install black
-          pip install pytest
 
       - name: Lint with Flake8 and Black
         run: |
@@ -79,7 +78,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Generate coverage
-        run: pytest --cov=. . --doctest-modules --ignore=Bottle.py
+        run: |
+          pip install pytest
+          pytest --cov=. . --doctest-modules --ignore=Bottle.py
       - name: Generate coverage badge
         run: coverage-badge -o coverage.svg
       - name: Commit coverage files
