--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -80,6 +80,7 @@ jobs:
       - name: Generate coverage
         run: |
           pip install pytest
+          pip install pytest-cov
           pytest --cov=. . --doctest-modules --ignore=Bottle.py
       - name: Generate coverage badge
         run: coverage-badge -o coverage.svg
