--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -67,16 +67,13 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     needs: [test]
-    strategy:
-      matrix:
-        python-version: [3.11, 3.8]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.8
       - name: Generate coverage
         run: |
           pip install pytest
